c/trial1.txt
make
gcc -c -o client.o client.c -Wall
client.c:4:1: warning: data definition has no type or storage class
 updatedDgist = NULL;
 ^~~~~~~~~~~~
client.c:4:1: warning: type defaults to 'int' in declaration of 'updatedDgist' [-Wimplicit-int]
client.c:4:1: error: conflicting types for 'updatedDgist'
In file included from client.c:1:
all_header.h:112:15: note: previous declaration of 'updatedDgist' was here
 extern DGIST* updatedDgist;
               ^~~~~~~~~~~~
client.c:4:16: warning: initialization of 'int' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
 updatedDgist = NULL;
                ^~~~
client.c: In function 'updateGlobalVariables':
client.c:31:22: warning: comparison between pointer and integer
     if (updatedDgist == NULL) {
                      ^~
client.c:32:22: warning: assignment to 'int' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
         updatedDgist = malloc(sizeof(DGIST));
                      ^
client.c:34:12: warning: passing argument 1 of 'memcpy' makes pointer from integer without a cast [-Wint-conversion]
     memcpy(updatedDgist, dgist, sizeof(DGIST));
            ^~~~~~~~~~~~
In file included from all_header.h:6,
                 from client.c:1:
/usr/include/string.h:42:14: note: expected 'void * restrict' but argument is of type 'int'
 extern void *memcpy (void *__restrict __dest, const void *__restrict __src,
              ^~~~~~
client.c:40:24: error: invalid type argument of '->' (have 'int')
   client = updatedDgist->players[i];
                        ^~
make: *** [Makefile:32: client.o] Error 1


Connected to server 127.0.0.1:8080
Inside Run Algorithm Function,,,
WiringPi Car Setup Finished.
Sensors pinMode finished.
I2C device initialized at address 0x16
get_i2c_device finished.
Car will stop for 10 seconds.
SCANNING QR CODE: 00  BEFORE QR CODE:
=========SENDING INFORMATION TO SERVER==========
SEND COMPLETE
Server socket: 4 my socket: 3
my Index: 1
=========Updated NEW INFORMATION!!==========
++++++++++Player 1++++++++++
Location: (0,0)
Score: 0
Bomb: 4
++++++++++Player 2++++++++++
Location: (-1225504975,-1094867964)
Score: -1094868052
Bomb: -1224878816
==========PRINT DONE==========
UpdatedDgist not Null Detected,,,
Initial Recent Head Direction: 3 [L1 U2 R3 D4]
Initial max point: (0,0)
You haven't arrived at MaxScorePoint yet. now max point : (0,0)
Arrived at Max Score Point! Ready to Make Movement! Making,,,
All reachable points: (0,0), (0,1), (0,2), (0,3), (0,4), (1,0), (1,1), (1,2), (1,3), (1,4), (2,0), (2,1), (2,2), (2,3), (2,4), (3,0), (3,1), (3,2), (3,3), (3,4), (4,0), (4,1), (4,2), (4,3), (4,4),
Max score point: (0, 2) with score 4
Local optimal path: of length 3
now max point1 : (124,2)
(0, 0)
(0, 1)
(0, 2)
now max point2 : (124,2)
Directions to go:
RIGHT
RIGHT
now max point3 : (124,2)
now max point4 : (124,2)
Your Proposed Movements:
straight
straight
now max point5 : (124,2)
RECENT HEAD DIRECTION : 3 <<Directions : Left(1) Up(2) Right(3) Down(4)>>

now max point6 : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)
You haven't arrived at MaxScorePoint yet. now max point : (124,2)



Connected to server 127.0.0.1:8080
Inside Run Algorithm Function,,,
WiringPi Car Setup Finished.
Sensors pinMode finished.
I2C device initialized at address 0x16
get_i2c_device finished.
Car will stop for 10 seconds.
Starting car....
Server socket: 4 my socket: 3
my Index: 1
=========Updated NEW INFORMATION!!==========
++++++++++Player 1++++++++++
Location: (-1,-1)
Score: 0
Bomb: 4
++++++++++Player 2++++++++++
Location: (-1225447631,-1098005500)
Score: -1098005588
Bomb: -1224821472
==========PRINT DONE==========
UpdatedDgist not Null Detected,,,
Initial Recent Head Direction: 2 [L1 U2 R3 D4]
Initial max point: (4,4)
Arrived at Max Score Point! Ready to Make Movement! Making,,,
All reachable points: (0,3), (0,4), (1,2), (1,3), (1,4), (2,1), (2,2), (2,3), (2,4), (3,0), (3,1), (3,2), (3,3), (3,4), (4,0), (4,1), (4,2), (4,3),
Max score point: (3, 4) with score 4
Local optimal path: of length 2
(4, 4)
(3, 4)
Directions to go:
UP
Your Proposed Movements:
straight
RECENT HEAD DIRECTION : 2 <<Directions : Left(1) Up(2) Right(3) Down(4)>>

Current Met Node 1
SCANNING QR CODE: 34  BEFORE QR CODE:
=========SENDING INFORMATION TO SERVER==========
SEND COMPLETE
Server socket: 4 my socket: 3
my Index: 1
=========Updated NEW INFORMATION!!==========
++++++++++Player 1++++++++++
Location: (3,4)
Score: 4
Bomb: 4
++++++++++Player 2++++++++++
Location: (-1225447631,-1098005500)
Score: -1098005588
Bomb: -1224821472
==========PRINT DONE==========
Arrived at Max Score Point! Ready to Make Movement! Making,,,
All reachable points: (0,0), (0,1), (0,2), (0,3), (0,4), (1,0), (1,1), (1,2), (1,3), (1,4), (2,0), (2,1), (2,2), (2,3), (2,4), (3,0), (3,1), (3,2), (3,3), (3,4), (4,0), (4,1), (4,2), (4,3), (4,4),
Max score point: (0, 3) with score 4
Local optimal path: of length 5
(3, 4)
(3, 3)
(2, 3)
(1, 3)
(0, 3)
Directions to go:
LEFT
UP
UP
UP
Your Proposed Movements:
l_spin
r_spin
straight
straight
RECENT HEAD DIRECTION : 2 <<Directions : Left(1) Up(2) Right(3) Down(4)>>

Current Met Node 1
Current Met Node 2
Current Met Node 3
Current Met Node 4
Server socket: 4 my socket: 3
my Index: 1
=========Updated NEW INFORMATION!!==========
++++++++++Player 1++++++++++
Location: (3,4)
Score: 4
Bomb: 4
++++++++++Player 2++++++++++
Location: (-1225447631,-1098005500)
Score: -1098005588
Bomb: -1224821472
==========PRINT DONE==========
SCANNING QR CODE: 03  BEFORE QR CODE: 34
=========SENDING INFORMATION TO SERVER==========
SEND COMPLETE
Server socket: 4 my socket: 3
my Index: 1
=========Updated NEW INFORMATION!!==========
++++++++++Player 1++++++++++
Location: (0,3)
Score: 8
Bomb: 4
++++++++++Player 2++++++++++
Location: (-1225447631,-1098005500)
Score: -1098005588
Bomb: -1224821472
==========PRINT DONE==========
Arrived at Max Score Point! Ready to Make Movement! Making,,,
All reachable points: (0,0), (0,1), (0,2), (0,3), (0,4), (1,0), (1,1), (1,2), (1,3), (1,4), (2,0), (2,1), (2,2), (2,3), (2,4), (3,0), (3,1), (3,2), (3,3), (3,4), (4,0), (4,1), (4,2), (4,3), (4,4),
Max score point: (0, 2) with score 4
Local optimal path: of length 2
(0, 3)
(0, 2)
Directions to go:
LEFT
Your Proposed Movements:
l_spin
RECENT HEAD DIRECTION : 1 <<Directions : Left(1) Up(2) Right(3) Down(4)>>

Current Met Node 1
Current Met Node 2
Current Met Node 3



